# advent-of-code

./: .gitignore  aoc
2015/1/1/python/: run
2015/1/2/python/: run
2015/10/1/python/: run
2015/10/2/python/: run
2015/11/1/python/: run
2015/11/2/python/: run
2015/12/1/python/: run
2015/12/2/python/: run
2015/2/1/python/: run
2015/2/2/python/: run
2015/3/1/python/: run
2015/3/2/python/: run
2015/4/1/python/: run
2015/4/2/python/: run
2015/5/1/python/: run
2015/5/2/python/: run
2015/6/1/python/: run
2015/6/2/python/: run
2015/7/1/python/: run
2015/7/2/python/: run
2015/8/1/python/: run
2015/8/2/python/: run
2015/9/1/python/: run
2015/9/2/python/: run
2019/1/1/: correct
2019/1/1/python/: run
2019/1/2/: correct
2019/1/2/python/: run
2019/2/1/python/: run
2019/2/1/rust/: Cargo.toml
2019/2/1/rust/src/: main.rs
2019/2/2/python/: run
2019/2/2/rust/: Cargo.toml  run
2019/2/2/rust/src/: main.rs
2019/3/1/python/: run
2019/3/2/python/: run
2019/4/1/python/: run
2019/4/2/python/: run
2019/5/1/: correct
2019/5/1/rust/: Cargo.toml
2019/5/1/rust/src/: main.rs
2019/5/2/rust/: Cargo.toml
2019/5/2/rust/src/: main.rs
2019/6/1/python/: run
2019/6/2/python/: run
2019/7/1/rust/: Cargo.toml
2019/7/1/rust/src/: main.rs
2019/intcode-rs/: Cargo.toml
2019/intcode-rs/src/: lib.rs
